# pyscadeone

./: .cspell.json  .gitignore  CONTRIBUTING.md  Makefile  README.md  autodoc.bat  get_dll.sh  packages.xlsx  pyproject.toml  pytest_run.sh
.cspell/: pyscadeone-dictionary.txt
doc/: Makefile  check_classes.py  gram.py
doc/source/: conf.py  index.rst
doc/source/api/: index.rst  model.rst  project.rst  scadeone.puml  scadeone.rst  utils.rst
doc/source/api/language/: clock.rst  declarations.rst  expressions.rst  group.rst  index.rst  operator.rst
doc/source/api/language/declarations/: common.rst  global.rst  module.rst  type.rst
doc/source/api/language/expressions/: array.rst  atom.rst  basic_expr.rst  forward.rst  index.rst  instance.rst  selection.rst  sequential.rst  structure.rst  update.rst  variant.rst
doc/source/api/language/operator/: activation.rst  automaton.rst  diagram.rst  equation.rst  operator.rst  other_sections.rst  var.rst
doc/source/examples/: index.rst
doc/source/examples/diagram/: index.rst  quad_flight_control.py
doc/source/getting_started/: index.rst
doc/source/user_guide/: coverage.rst  index.rst  modeler.rst  overview.rst  quad_flight_control.py  toolbox.rst  verifier.rst
examples/models/CC/CC_Tests/: CC_Tests.sproj.editor
examples/models/CC/CC_Tests/assets/: CC_Test.swan
examples/models/CC/CC_Tests/jobs/simu_571f111/: .sjob
examples/models/CC/CruiseControl/: CruiseControl.sproj.editor
examples/models/CC/CruiseControl/assets/: CC.swan  CarTypes.swani
examples/models/CC/utils/assets/: Utils.swan
scripts/: activate.sh  distrib.sh  setup.sh  smoke_test.sh
src/ansys/scadeone/: __init__.py  cli.py  project.py  scadeone.py
src/ansys/scadeone/common/: assets.py  exception.py  logger.py  storage.py  versioning.py
src/ansys/scadeone/model/: __init__.py  dotnet.py  information.py  loader.py  model.py  parser.py  pyofast.py
src/ansys/scadeone/swan/: __init__.py  common.py  diagram.py  equations.py  expressions.py  forward.py  globals.py  groupdecl.py  instances.py  modules.py  namespace.py  operator.py  scopes.py  scopesections.py  typedecl.py  useroperator.py  variable.py
tests/: conftest.py  smoketest.py  test_job.py  test_model.py  test_project.py  test_pyofast.py  test_simple.py  test_tool.py
tests/models/types/: types.sproj  types.sproj.editor
tests/scadeone/: test_project.py
tests/scadeone/model/: test_model.py  test_pyofast.py
tests/scadeone/swan/: test_diagram.py  test_namespace.py
(+1 files in other folders)
